# Fastapi_01

./: .gitignore  README.md  crud.py  items_views.py  main.py  pyproject.toml  queries.sql  requirements.txt  ss.py  sss.py
alembic/: env.py
alembic/versions/: 2026_01_03_0957-327dfd414e8e_create_products_table.py  2026_01_03_1015-098e856e145c_create_users_table.py  2026_01_04_0927-fc851d98365b_create_posts_table.py  2026_01_04_1003-be23e14fd12e_create_profile_table.py  2026_01_06_0950-d075bdfc1b20_update_post_table.py  2026_01_06_0958-4d0f4ac8633c_update_posts_table.py  2026_01_11_1840-36162f168702_create_orders_table.py  2026_01_11_1905-9e299bc7d907_create_association_table.py  2026_01_14_0810-ee0de77b4ea5_add_count_column.py  2026_01_15_0804-9a7f6f474eda_add_count_column.py  2026_01_17_1045-c35ac2255643_add_unit_price_column.py
api_v1/: __init__.py
api_v1/demo_auth/: demo_jwt_auth.py  helpers.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: schemas.py
