[project]
name = "fastapi-01"
version = "0.1.0"
description = ""
authors = [
    {name = "Евгений Бусыгин (ПК)",email = "abusyginza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.127.0,<0.128.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
